# spirius-smpp-tools

./: .env.common.example  .env.example  .env.receiver.example  .env.sender.example  .gitignore  .ruff.toml  README.md  pyproject.toml
common/: smpp_common.py
docs/: smpp-traffic-flows.md
tools/: smpp_receiver.py  smpp_sender.py  sms_decoder.py  sms_encoder.py
